--- a/CrudApp2/Views/Shared/_Layout.cshtml
+++ b/CrudApp2/Views/Shared/_Layout.cshtml
@@ -33,8 +33,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Order" asp-action="Search">Search</a>
                         </li>
-                    </ul>
+                        <partial name="_LoginPartial" />
+                    </ul>                    
                 </div>
+
             </div>
         </nav>
     </header>
