--- a/CrudApp2/Views/User/Delete.cshtml
+++ b/CrudApp2/Views/User/Delete.cshtml
@@ -14,7 +14,7 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="UserId" />
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
